--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ baseurl: "/manualesodoo"
 url: "https://sanventru.github.io"
 plugins:
   - jekyll-relative-links
+  - jekyll-optional-front-matter
+  - jekyll-readme-index
+  - jekyll-default-layout
+  - jekyll-titles-from-headings
 relative_links:
   enabled: true
   collections: true
@@ -18,3 +22,17 @@ exclude:
   - "odoo 16 módulos"
   - "odoo16 ajustes y funciones estandar"
   - ".git"
+optional_front_matter:
+  remove_originals: true
+readme_index:
+  enabled: true
+  remove_originals: true
+titles_from_headings:
+  enabled: true
+  strip_title: true
+  collections: true
+defaults:
+  - scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
